--- a/css/main.css
+++ b/css/main.css
@@ -101,41 +101,26 @@
     transform: translateY(0%);
   }
 }
-@keyframes line1 {
-  from {
-    stroke-dasharray: calc((-20px + 30vw) * 0.8 * 3.1415926535);
-  }
-  to {
-    stroke-dashoffset: calc((-20px + 30vw) * 0.8 * 0.07 * 3.1415926535);
-  }
-}
-@keyframes line2 {
-  from {
-    stroke-dasharray: calc((-10px + 20vw) * 0.8 * 3.1415926535);
-  }
-  to {
-    stroke-dashoffset: calc((-10px + 20vw) * 0.8 * 0.07 * 3.1415926535);
-  }
-}
-@keyframes line3 {
-  from {
-    stroke-dasharray: 301.592894736px;
-  }
-  to {
-    stroke-dashoffset: 21.1115026315px;
-  }
-}
-@keyframes line4 {
-  from {
-    stroke-dasharray: 402.123859648px;
-  }
-  to {
-    stroke-dashoffset: 28.1486701754px;
-  }
-}
-@keyframes oo {
+@keyframes ferris_wheel {
   100% {
     transform: rotate(360deg);
+  }
+}
+@keyframes nyan_hover_tone {
+  0% {
+    color: #ffe1eb;
+  }
+  25% {
+    color: #ffaec8;
+  }
+  50% {
+    color: #e87d9e;
+  }
+  75% {
+    color: #ffaec8;
+  }
+  100% {
+    color: #ffe1eb;
   }
 }
 main .main_intro .nyan_1 .first_flex {
@@ -675,16 +660,19 @@ main .main_aboutme .nyan_zone .about_me_contents .about_me_illust .about_me_back
 }
 main .main_aboutme .nyan_zone .about_me_contents .about_me_descri {
   margin-top: 60px;
+  min-height: 610px;
 }
 @media screen and (min-width: 768px) {
   main .main_aboutme .nyan_zone .about_me_contents .about_me_descri {
     margin-top: 0;
     width: 70%;
+    min-height: 575px;
   }
 }
 @media screen and (min-width: 1200px) {
   main .main_aboutme .nyan_zone .about_me_contents .about_me_descri {
     width: 680px;
+    min-height: none;
   }
 }
 @media screen and (min-width: 1600px) {
@@ -875,51 +863,6 @@ main .main_aboutme .nyan_zone .about_me_contents .about_me_descri .descri_commen
 @media screen and (min-width: 1600px) {
   main .main_aboutme .nyan_zone .about_me_contents .about_me_descri .descri_comment h4 {
     font-size: 21px;
-  }
-}
-main .main_aboutme .nyan_zone .about_me_contents .about_me_descri .descri_comment .descri_cursor {
-  display: inline-block;
-  border-radius: 1.5px;
-  height: 3px;
-  width: calc(6px + 2vw);
-  margin-left: 5px;
-  background-color: #e87d9e;
-  animation: cursor_blink 0.5s linear infinite;
-}
-@media screen and (min-width: 768px) {
-  main .main_aboutme .nyan_zone .about_me_contents .about_me_descri .descri_comment .descri_cursor {
-    width: calc(8px + 1vw);
-  }
-}
-@media screen and (min-width: 1200px) {
-  main .main_aboutme .nyan_zone .about_me_contents .about_me_descri .descri_comment .descri_cursor {
-    width: 24px;
-    height: 4px;
-  }
-}
-@media screen and (min-width: 1600px) {
-  main .main_aboutme .nyan_zone .about_me_contents .about_me_descri .descri_comment .descri_cursor {
-    width: 28px;
-  }
-}
-main .main_aboutme .nyan_zone .about_me_contents .about_me_descri .descri_comment .descri_cursor.n2 {
-  margin-left: 3px;
-  background-color: white;
-}
-@media screen and (min-width: 768px) {
-  main .main_aboutme .nyan_zone .about_me_contents .about_me_descri .descri_comment .descri_cursor.n2 {
-    width: calc(8px + 1vw);
-  }
-}
-@media screen and (min-width: 1200px) {
-  main .main_aboutme .nyan_zone .about_me_contents .about_me_descri .descri_comment .descri_cursor.n2 {
-    width: 24px;
-    height: 4px;
-  }
-}
-@media screen and (min-width: 1600px) {
-  main .main_aboutme .nyan_zone .about_me_contents .about_me_descri .descri_comment .descri_cursor.n2 {
-    width: 28px;
   }
 }
 main .main_aboutme .nyan_zone .about_me_contents .about_me_descri .descri_comment p {
@@ -1121,6 +1064,9 @@ main .main_aboutme .nyan_zone .about_me_contents .about_me_descri .descri_gauge 
   font-size: calc(6px + 2vw);
   text-align: center;
   cursor: pointer;
+}
+main .main_aboutme .nyan_zone .about_me_contents .about_me_descri .descri_gauge .num p:hover {
+  animation: nyan_hover_tone 1s linear infinite;
 }
 @media screen and (min-width: 768px) {
   main .main_aboutme .nyan_zone .about_me_contents .about_me_descri .descri_gauge .num p {
@@ -1897,6 +1843,9 @@ main .main_myskills .my_skills_gnb .mk_gnb_flex li {
   align-items: center;
   cursor: pointer;
 }
+main .main_myskills .my_skills_gnb .mk_gnb_flex li:hover {
+  animation: nyan_hover_tone 1s linear infinite;
+}
 @media screen and (min-width: 768px) {
   main .main_myskills .my_skills_gnb .mk_gnb_flex li {
     font-size: calc(16px + 1vw);
@@ -2473,6 +2422,16 @@ main .main_myskills .mk_main .nyan_zone .mk_icons {
     margin-top: 0;
   }
 }
+@media screen and (min-width: 1200px) {
+  main .main_myskills .mk_main .nyan_zone .mk_icons .ferris_first {
+    animation: ferris_wheel 90s linear infinite;
+  }
+}
+@media screen and (min-width: 1200px) {
+  main .main_myskills .mk_main .nyan_zone .mk_icons .mk_skill {
+    animation: ferris_wheel 90s linear reverse infinite;
+  }
+}
 main .main_myskills .mk_main .nyan_zone .mk_icons .mk_skill_zone {
   display: flex;
   flex-wrap: wrap;
@@ -2480,7 +2439,6 @@ main .main_myskills .mk_main .nyan_zone .mk_icons .mk_skill_zone {
 }
 @media screen and (min-width: 1200px) {
   main .main_myskills .mk_main .nyan_zone .mk_icons .mk_skill_zone {
-    animation: oo 90s linear infinite;
     width: 720px;
     height: 720px;
     display: block;
@@ -2504,7 +2462,6 @@ main .main_myskills .mk_main .nyan_zone .mk_icons .mk_skill_zone .mk_skill {
 }
 @media screen and (min-width: 1200px) {
   main .main_myskills .mk_main .nyan_zone .mk_icons .mk_skill_zone .mk_skill {
-    animation: oo 90s infinite linear reverse;
     width: 150px;
     position: absolute;
   }
@@ -2871,6 +2828,9 @@ main .main_projects .proj_gnb .proj_gnb_flex li {
   cursor: pointer;
   width: fit-content;
   text-align: center;
+}
+main .main_projects .proj_gnb .proj_gnb_flex li:hover {
+  animation: nyan_hover_tone 1s linear infinite;
 }
 @media screen and (min-width: 768px) {
   main .main_projects .proj_gnb .proj_gnb_flex li {
