--- a/css/animation.css
+++ b/css/animation.css
@@ -73,40 +73,25 @@
     transform: translateY(0%);
   }
 }
-@keyframes line1 {
-  from {
-    stroke-dasharray: calc((-20px + 30vw) * 0.8 * 3.1415926535);
-  }
-  to {
-    stroke-dashoffset: calc((-20px + 30vw) * 0.8 * 0.07 * 3.1415926535);
-  }
-}
-@keyframes line2 {
-  from {
-    stroke-dasharray: calc((-10px + 20vw) * 0.8 * 3.1415926535);
-  }
-  to {
-    stroke-dashoffset: calc((-10px + 20vw) * 0.8 * 0.07 * 3.1415926535);
-  }
-}
-@keyframes line3 {
-  from {
-    stroke-dasharray: 301.592894736px;
-  }
-  to {
-    stroke-dashoffset: 21.1115026315px;
-  }
-}
-@keyframes line4 {
-  from {
-    stroke-dasharray: 402.123859648px;
-  }
-  to {
-    stroke-dashoffset: 28.1486701754px;
-  }
-}
-@keyframes oo {
+@keyframes ferris_wheel {
   100% {
     transform: rotate(360deg);
+  }
+}
+@keyframes nyan_hover_tone {
+  0% {
+    color: #ffe1eb;
+  }
+  25% {
+    color: #ffaec8;
+  }
+  50% {
+    color: #e87d9e;
+  }
+  75% {
+    color: #ffaec8;
+  }
+  100% {
+    color: #ffe1eb;
   }
 }
