--- a/css/header.css
+++ b/css/header.css
@@ -101,46 +101,26 @@
     transform: translateY(0%);
   }
 }
-@keyframes line1 {
-  from {
-    stroke-dasharray: calc((-20px + 30vw) * 0.8 * 3.1415926535);
-  }
-  to {
-    stroke-dashoffset: calc((-20px + 30vw) * 0.8 * 0.07 * 3.1415926535);
-  }
-}
-@keyframes line2 {
-  from {
-    stroke-dasharray: calc((-10px + 20vw) * 0.8 * 3.1415926535);
-  }
-  to {
-    stroke-dashoffset: calc((-10px + 20vw) * 0.8 * 0.07 * 3.1415926535);
-  }
-}
-@keyframes line3 {
-  from {
-    stroke-dasharray: 301.592894736px;
-  }
-  to {
-    stroke-dashoffset: 21.1115026315px;
-  }
-}
-@keyframes line4 {
-  from {
-    stroke-dasharray: 402.123859648px;
-  }
-  to {
-    stroke-dashoffset: 28.1486701754px;
-  }
-}
-@keyframes oo {
+@keyframes ferris_wheel {
   100% {
     transform: rotate(360deg);
   }
 }
-@keyframes xx {
+@keyframes nyan_hover_tone {
+  0% {
+    color: #ffe1eb;
+  }
+  25% {
+    color: #ffaec8;
+  }
+  50% {
+    color: #e87d9e;
+  }
+  75% {
+    color: #ffaec8;
+  }
   100% {
-    transform: rotate(-360deg);
+    color: #ffe1eb;
   }
 }
 header .header_flex {
@@ -348,6 +328,9 @@ header .header_flex .menu_gnb_sh ul.gnb_main li {
 header .header_flex .menu_gnb_sh ul.gnb_main li p {
   display: none;
   color: white;
+}
+header .header_flex .menu_gnb_sh ul.gnb_main li p:hover {
+  animation: nyan_hover_tone 1s linear infinite;
 }
 @media screen and (min-width: 768px) {
   header .header_flex .menu_gnb_sh ul.gnb_main li p {
