--- a/scss/style.scss
+++ b/scss/style.scss
@@ -5,6 +5,8 @@ $break-tablet: '768px';
 $break-semipc: '1200px'; 
 $break-hugepc: '1600px';
 
+$break-480height: '480px';
+
 /*=================톤앤매너=================*/
 // $background: #060f39;
 $background: #000620;
