--- a/css/index.css
+++ b/css/index.css
@@ -106,14 +106,16 @@ body {
   display: flex;
   align-items: center;
   min-height: 100vh;
+  width: 100%;
 }
-@media screen and (min-width: 320px) {
+@media screen and (min-width: 320px) and (min-height: 480px) {
   .under_320 {
     display: none;
   }
 }
 .under_320 .under_320_contents {
   text-align: center;
+  margin: 0 auto;
 }
 .under_320 .under_320_contents h2 {
   font-size: calc(2px + 10vw);
@@ -140,7 +142,7 @@ body {
   display: none;
   overflow: hidden;
 }
-@media screen and (min-width: 320px) {
+@media screen and (min-width: 320px) and (min-height: 480px) {
   .bighead {
     display: block;
   }
@@ -1849,21 +1851,18 @@ header .header_flex .menu_gnb_sh .gnb_base .gnb_over img {
 }
 header .gnb_nyan {
   position: fixed;
-  left: 0;
-  right: auto;
+  top: 0;
+  left: auto;
   background-color: #000620;
   z-index: 2;
-  min-height: 100vh;
   width: 100%;
+  max-width: 500px;
+  min-height: 100vh;
   overflow-x: hidden;
 }
 @media screen and (min-width: 768px) {
   header .gnb_nyan {
     width: 50%;
-    max-width: 500px;
-    min-height: 100vh;
-    top: 0;
-    left: auto;
   }
 }
 @media screen and (min-width: 1200px) {
@@ -6803,6 +6802,9 @@ main .main_contactme .cm_flex .cm_contents_area .cm_hidden .cm_hd_main form .cmh
 .design_note .design_bighead .design_header .dh_flex .dh_contents .icon_entire .icon_flex p {
   font-size: calc(12px + 2vw);
 }
+.design_note .design_bighead .design_header .dh_flex .dh_contents .icon_entire .icon_flex p:hover {
+  animation: nyan_hover_tone 1s linear infinite;
+}
 @media screen and (min-width: 768px) {
   .design_note .design_bighead .design_header .dh_flex .dh_contents .icon_entire .icon_flex p {
     font-size: calc(16px + 1vw);
@@ -8776,14 +8778,16 @@ body {
   display: flex;
   align-items: center;
   min-height: 100vh;
+  width: 100%;
 }
-@media screen and (min-width: 320px) {
+@media screen and (min-width: 320px) and (min-height: 480px) {
   .under_320 {
     display: none;
   }
 }
 .under_320 .under_320_contents {
   text-align: center;
+  margin: 0 auto;
 }
 .under_320 .under_320_contents h2 {
   font-size: calc(2px + 10vw);
@@ -8810,7 +8814,7 @@ body {
   display: none;
   overflow: hidden;
 }
-@media screen and (min-width: 320px) {
+@media screen and (min-width: 320px) and (min-height: 480px) {
   .bighead {
     display: block;
   }
