--- a/css/reset.css
+++ b/css/reset.css
@@ -46,14 +46,16 @@ body {
   display: flex;
   align-items: center;
   min-height: 100vh;
+  width: 100%;
 }
-@media screen and (min-width: 320px) {
+@media screen and (min-width: 320px) and (min-height: 480px) {
   .under_320 {
     display: none;
   }
 }
 .under_320 .under_320_contents {
   text-align: center;
+  margin: 0 auto;
 }
 .under_320 .under_320_contents h2 {
   font-size: calc(2px + 10vw);
@@ -80,7 +82,7 @@ body {
   display: none;
   overflow: hidden;
 }
-@media screen and (min-width: 320px) {
+@media screen and (min-width: 320px) and (min-height: 480px) {
   .bighead {
     display: block;
   }
