--- a/scss/reset.scss
+++ b/scss/reset.scss
@@ -36,13 +36,18 @@ body {
   display: flex;
   align-items: center;
   min-height: 100vh;
+  width: 100%;
 
   @include responsive(mobile-cat) {
-    display: none;
+
+    @include height_responsive(h480) {
+      display: none;
+    }
   }
   
   .under_320_contents {
     text-align: center;
+    margin: 0 auto;
 
 
     h2 {
@@ -78,8 +83,11 @@ body {
   overflow: hidden;
 
   @include responsive(mobile-cat) {
-    display: block;
     // overflow: hidden;
+
+    @include height_responsive(h480) {
+      display: block;
+    }
   }
 }
 
