--- a/works/javascript/nyanBaseball/css/reset.css
+++ b/works/javascript/nyanBaseball/css/reset.css
@@ -34,6 +34,7 @@
   background-repeat: no-repeat;
   background-size: cover;
 }
+
 @media screen and (min-width: 900px) {
   .bighead {
     background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url(../img/part1/semi_back.png);
@@ -41,6 +42,7 @@
     background-size: cover;
   }
 }
+
 @media screen and (min-width: 1400px) {
   .bighead {
     background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url(../img/part1/background.jpg);
@@ -51,7 +53,7 @@
 
 html, body {
   color: white;
-  font-family: "IBMPlexSansKR-Regular";
+  font-family: 'IBMPlexSansKR-Regular';
 }
 
 h1 {
@@ -96,11 +98,13 @@ input, button {
   width: 90%;
   margin: 0 auto;
 }
+
 @media screen and (min-width: 900px) {
   .container {
     width: 93.75%;
   }
 }
+
 @media screen and (min-width: 1400px) {
   .container {
     max-width: 1180px;
