--- a/css/footer.css
+++ b/css/footer.css
@@ -69,35 +69,43 @@ body {
   background-color: #000620;
   color: white;
   height: 100%;
-  overflow: scroll;
 }
+
 .under_320 {
   display: flex;
   align-items: center;
   min-height: 100vh;
+  width: 100%;
 }
-@media screen and (min-width: 320px) {
+
+@media screen and (min-width: 320px) and (min-height: 480px) {
   .under_320 {
     display: none;
   }
 }
+
 .under_320 .under_320_contents {
   text-align: center;
+  margin: 0 auto;
 }
+
 .under_320 .under_320_contents h2 {
   font-size: calc(2px + 10vw);
   color: #e87d9e;
 }
+
 .under_320 .under_320_contents .img_320 {
   width: 50%;
   margin: 0 auto;
   transform: translateX(10%);
 }
+
 .under_320 .under_320_contents .img_320 img {
   display: block;
   width: 100%;
   margin-top: 15px;
 }
+
 .under_320 .under_320_contents p {
   font-size: calc(2px + 6vw);
   color: white;
@@ -109,7 +117,8 @@ body {
   display: none;
   overflow: hidden;
 }
-@media screen and (min-width: 320px) {
+
+@media screen and (min-width: 320px) and (min-height: 480px) {
   .bighead {
     display: block;
   }
@@ -120,17 +129,20 @@ body {
   position: relative;
   width: 95%;
 }
+
 @media screen and (min-width: 768px) {
   .nyan_zone {
-    width: 96.3541666667%;
+    width: 96.35416666666667%;
   }
 }
+
 @media screen and (min-width: 1200px) {
   .nyan_zone {
     width: 100%;
     max-width: 1180px;
   }
 }
+
 @media screen and (min-width: 1600px) {
   .nyan_zone {
     width: 100%;
@@ -171,46 +183,55 @@ a {
 footer .footer_trace {
   margin-top: 60px;
 }
+
 @media screen and (min-width: 768px) {
   footer .footer_trace {
     margin-top: 80px;
   }
 }
+
 @media screen and (min-width: 1200px) {
   footer .footer_trace {
     margin-top: 100px;
   }
 }
+
 @media screen and (min-width: 1600px) {
   footer .footer_trace {
     margin-top: 120px;
   }
 }
+
 footer .footer_important {
   position: relative;
   overflow: hidden;
 }
+
 footer .footer_important .footer_road {
   position: relative;
   padding-top: calc(60px + 60vw);
   width: 100%;
   display: block;
 }
+
 @media screen and (min-width: 768px) {
   footer .footer_important .footer_road {
-    padding-top: 60vw;
+    padding-top: calc(60vw);
   }
 }
+
 @media screen and (min-width: 1200px) {
   footer .footer_important .footer_road {
-    padding-top: 65vw;
+    padding-top: calc(65vw);
   }
 }
+
 @media screen and (min-width: 1600px) {
   footer .footer_important .footer_road {
-    padding-top: 70vw;
+    padding-top: calc(70vw);
   }
 }
+
 footer .footer_important .footer_kitty {
   position: absolute;
   width: 100%;
@@ -218,51 +239,61 @@ footer .footer_important .footer_kitty {
   bottom: -20%;
   z-index: -1;
 }
+
 footer .footer_important .footer_icons {
   width: 100%;
   position: absolute;
   bottom: 10%;
 }
+
 @media screen and (min-width: 768px) {
   footer .footer_important .footer_icons {
     bottom: 13%;
   }
 }
+
 @media screen and (min-width: 1200px) {
   footer .footer_important .footer_icons {
     bottom: 15%;
   }
 }
+
 footer .footer_important .footer_icons .icon_flex {
   width: fit-content;
   margin: 0 auto;
 }
+
 footer .footer_important .footer_icons .icon_flex img {
   position: relative;
   cursor: pointer;
   width: calc(25px + 3vw);
 }
+
 @media screen and (min-width: 768px) {
   footer .footer_important .footer_icons .icon_flex img {
     width: calc(30px + 3vw);
   }
 }
+
 @media screen and (min-width: 1200px) {
   footer .footer_important .footer_icons .icon_flex img {
     margin-right: 7px;
     width: 60px;
   }
 }
+
 @media screen and (min-width: 1600px) {
   footer .footer_important .footer_icons .icon_flex img {
     margin-right: 10px;
     width: 80px;
   }
 }
+
 footer .footer_important .footer_icons .icon_flex img:hover {
   rotate: 30deg;
   transition: rotate 0.2s linear;
 }
+
 footer .footer_important .footer_information {
   position: absolute;
   bottom: 5%;
@@ -270,72 +301,87 @@ footer .footer_important .footer_information {
   translate: -50% 0;
   width: 100%;
 }
+
 @media screen and (min-width: 768px) {
   footer .footer_important .footer_information {
     bottom: 5%;
   }
 }
+
 footer .footer_important .footer_information p {
   text-align: center;
 }
+
 footer .footer_important .footer_information p em {
   font-style: normal;
   font-size: calc(2px + 3vw);
   display: block;
 }
+
 @media screen and (min-width: 768px) {
   footer .footer_important .footer_information p em {
     font-size: calc(2px + 2vw);
   }
 }
+
 @media screen and (min-width: 1200px) {
   footer .footer_important .footer_information p em {
     font-size: 32px;
   }
 }
+
 @media screen and (min-width: 1600px) {
   footer .footer_important .footer_information p em {
     font-size: 36px;
   }
 }
+
 footer .footer_important .footer_information p q {
   margin-top: 7px;
   display: none;
 }
+
 @media screen and (min-width: 768px) {
   footer .footer_important .footer_information p q {
     margin-top: 10px;
   }
 }
+
 @media screen and (min-width: 1200px) {
   footer .footer_important .footer_information p q {
     margin-top: 12px;
   }
 }
+
 @media screen and (min-width: 1600px) {
   footer .footer_important .footer_information p q {
     margin-top: 15px;
   }
 }
+
 @media screen and (min-width: 768px) {
   footer .footer_important .footer_information p q {
     display: block;
     font-size: calc(2px + 2vw);
   }
 }
+
 @media screen and (min-width: 1200px) {
   footer .footer_important .footer_information p q {
     font-size: 24px;
   }
 }
+
 @media screen and (min-width: 1600px) {
   footer .footer_important .footer_information p q {
     font-size: 28px;
   }
 }
+
 footer .footer_important .footer_information p q br {
   line-height: 0;
 }
+
 @media screen and (min-width: 450px) {
   footer .footer_important .footer_information p q br {
     display: none;
