--- a/css/header.css
+++ b/css/header.css
@@ -51,6 +51,7 @@
     transform: rotateZ(5deg);
   }
 }
+
 @keyframes header_gnb_icon {
   0% {
     transform: translateY(0%);
@@ -62,6 +63,7 @@
     transform: translateY(0%);
   }
 }
+
 @keyframes header_gnb_mobile {
   0% {
     transform: rotateZ(0) translateY(0em);
@@ -79,6 +81,7 @@
     transform: rotateZ(0deg) translateY(0em);
   }
 }
+
 @keyframes cursor_blink {
   0% {
     opacity: 0;
@@ -90,6 +93,7 @@
     opacity: 0;
   }
 }
+
 @keyframes cat_jump {
   0% {
     transform: translateY(0%);
@@ -101,11 +105,13 @@
     transform: translateY(0%);
   }
 }
+
 @keyframes ferris_wheel {
   100% {
     transform: rotate(360deg);
   }
 }
+
 @keyframes nyan_hover_tone {
   0% {
     color: #ffe1eb;
@@ -123,6 +129,7 @@
     color: #ffe1eb;
   }
 }
+
 @keyframes dn_cat_head {
   0% {
     transform: rotateZ(0);
@@ -140,6 +147,7 @@
     transform: rotateZ(0deg);
   }
 }
+
 header .header_flex {
   display: flex;
   padding-top: 10px;
@@ -147,47 +155,56 @@ header .header_flex {
   align-items: center;
   padding: 10px 0;
 }
+
 @media screen and (min-width: 768px) {
   header .header_flex {
     padding: 15px 0;
   }
 }
+
 @media screen and (min-width: 1200px) {
   header .header_flex {
     padding: 20px 0;
   }
 }
+
 header .header_flex .header_logo {
   order: 1;
   display: flex;
   cursor: pointer;
   align-items: center;
 }
+
 header .header_flex .header_logo .img_area {
   z-index: 3;
 }
+
 header .header_flex .header_logo .img_area img {
   width: 50px;
   transform-origin: center bottom;
   animation: header_logo 3s infinite linear;
 }
+
 @media screen and (min-width: 768px) {
   header .header_flex .header_logo .img_area img {
     width: 55px;
     margin-right: 15px;
   }
 }
+
 @media screen and (min-width: 1200px) {
   header .header_flex .header_logo .img_area img {
     width: 65px;
     margin-right: 20px;
   }
 }
+
 @media screen and (min-width: 1600px) {
   header .header_flex .header_logo .img_area img {
     width: 70px;
   }
 }
+
 header .header_flex .header_logo .text_area {
   width: 75px;
   color: #e87d9e;
@@ -195,6 +212,7 @@ header .header_flex .header_logo .text_area {
   left: 50%;
   transform: translate(-50%);
 }
+
 @media screen and (min-width: 768px) {
   header .header_flex .header_logo .text_area {
     width: 90px;
@@ -204,70 +222,84 @@ header .header_flex .header_logo .text_area {
     transform: translate(0%);
   }
 }
+
 @media screen and (min-width: 1200px) {
   header .header_flex .header_logo .text_area {
     width: 100px;
   }
 }
+
 @media screen and (min-width: 1600px) {
   header .header_flex .header_logo .text_area {
     width: 110px;
   }
 }
+
 header .header_flex .header_logo .text_area h3 {
   display: flex;
   justify-content: space-between;
   align-items: center;
   font-weight: bold;
 }
+
 header .header_flex .header_logo .text_area h3 span {
   font-size: 18px;
   position: relative;
 }
+
 @media screen and (min-width: 768px) {
   header .header_flex .header_logo .text_area h3 span {
     font-size: 21px;
   }
 }
+
 @media screen and (min-width: 1200px) {
   header .header_flex .header_logo .text_area h3 span {
     font-size: 24px;
   }
 }
+
 @media screen and (min-width: 1600px) {
   header .header_flex .header_logo .text_area h3 span {
     font-size: 28px;
   }
 }
+
 header .header_flex .header_logo .text_area h4 {
   display: flex;
   justify-content: space-between;
   margin-top: 6px;
   font-weight: bold;
 }
+
 @media screen and (min-width: 768px) {
   header .header_flex .header_logo .text_area h4 {
     margin-top: 6px;
   }
 }
+
 @media screen and (min-width: 1200px) {
   header .header_flex .header_logo .text_area h4 {
     margin-top: 8px;
   }
 }
+
 header .header_flex .header_logo .text_area h4 span {
   font-size: 9.5px;
 }
+
 @media screen and (min-width: 768px) {
   header .header_flex .header_logo .text_area h4 span {
     font-size: 12px;
   }
 }
+
 @media screen and (min-width: 1200px) {
   header .header_flex .header_logo .text_area h4 span {
     font-size: 16px;
   }
 }
+
 header .header_flex .menu_gnb_mt {
   z-index: 3;
   width: 70px;
@@ -275,16 +307,19 @@ header .header_flex .menu_gnb_mt {
   position: relative;
   order: 3;
 }
+
 @media screen and (min-width: 768px) {
   header .header_flex .menu_gnb_mt {
     width: 75px;
   }
 }
+
 @media screen and (min-width: 1200px) {
   header .header_flex .menu_gnb_mt {
     display: none;
   }
 }
+
 header .header_flex .menu_gnb_mt img {
   cursor: pointer;
   position: absolute;
@@ -292,60 +327,75 @@ header .header_flex .menu_gnb_mt img {
   width: 35px;
   animation: header_gnb_icon infinite cubic-bezier(0.62, 0.06, 0.5, 0.97) 2s;
 }
+
 @media screen and (min-width: 768px) {
   header .header_flex .menu_gnb_mt img {
     width: 40px;
   }
 }
+
 header .header_flex .menu_gnb_sh {
   order: 2;
   display: none;
 }
+
 @media screen and (min-width: 768px) {
   header .header_flex .menu_gnb_sh {
     display: block;
     width: 50%;
   }
 }
+
 @media screen and (min-width: 1200px) {
   header .header_flex .menu_gnb_sh {
     width: 780px;
   }
 }
+
 @media screen and (min-width: 1600px) {
   header .header_flex .menu_gnb_sh {
     width: 980px;
   }
 }
+
 header .header_flex .menu_gnb_sh ul.gnb_main {
   display: flex;
   justify-content: space-between;
   width: 100%;
 }
+
 header .header_flex .menu_gnb_sh ul.gnb_main li {
   cursor: pointer;
   align-items: center;
 }
+
 @media screen and (min-width: 768px) {
   header .header_flex .menu_gnb_sh ul.gnb_main li {
     display: none;
   }
 }
+
 @media screen and (min-width: 1200px) {
   header .header_flex .menu_gnb_sh ul.gnb_main li {
     display: block;
-    width: 130px;
-    display: flex;
-    flex-direction: row;
+    width: calc(780px/6);
   }
 }
+
 @media screen and (min-width: 1600px) {
   header .header_flex .menu_gnb_sh ul.gnb_main li {
-    width: 163.3333333333px;
+    width: calc(980px/6);
   }
 }
+
+header .header_flex .menu_gnb_sh ul.gnb_main li .sh_li_flex {
+  display: flex;
+  margin: 0 auto;
+  width: fit-content;
+}
+
 @media screen and (min-width: 1200px) {
-  header .header_flex .menu_gnb_sh ul.gnb_main li span {
+  header .header_flex .menu_gnb_sh ul.gnb_main li .sh_li_flex span {
     display: block;
     width: fit-content;
     margin: 0;
@@ -353,48 +403,67 @@ header .header_flex .menu_gnb_sh ul.gnb_main li {
     height: 21px;
   }
 }
+
 @media screen and (min-width: 1600px) {
-  header .header_flex .menu_gnb_sh ul.gnb_main li span {
+  header .header_flex .menu_gnb_sh ul.gnb_main li .sh_li_flex span {
     height: 24.5px;
   }
 }
+
 @media screen and (min-width: 1200px) {
-  header .header_flex .menu_gnb_sh ul.gnb_main li span img {
+  header .header_flex .menu_gnb_sh ul.gnb_main li .sh_li_flex span img {
     display: block;
     margin: 0;
     height: 100%;
   }
 }
+
 @media screen and (min-width: 1600px) {
-  header .header_flex .menu_gnb_sh ul.gnb_main li span img {
+  header .header_flex .menu_gnb_sh ul.gnb_main li .sh_li_flex span img {
     height: 100%;
   }
 }
-header .header_flex .menu_gnb_sh ul.gnb_main li p {
+
+header .header_flex .menu_gnb_sh ul.gnb_main li .sh_li_flex p {
   display: none;
   color: white;
   margin: 0;
   width: fit-content;
 }
-header .header_flex .menu_gnb_sh ul.gnb_main li p:hover {
+
+header .header_flex .menu_gnb_sh ul.gnb_main li .sh_li_flex p:hover {
   animation: nyan_hover_tone 1s linear infinite;
 }
+
 @media screen and (min-width: 768px) {
-  header .header_flex .menu_gnb_sh ul.gnb_main li p {
+  header .header_flex .menu_gnb_sh ul.gnb_main li .sh_li_flex p {
     display: none;
   }
 }
+
 @media screen and (min-width: 1200px) {
-  header .header_flex .menu_gnb_sh ul.gnb_main li p {
+  header .header_flex .menu_gnb_sh ul.gnb_main li .sh_li_flex p {
     display: block;
     font-size: 18px;
   }
 }
+
 @media screen and (min-width: 1600px) {
-  header .header_flex .menu_gnb_sh ul.gnb_main li p {
+  header .header_flex .menu_gnb_sh ul.gnb_main li .sh_li_flex p {
     font-size: 21px;
   }
 }
+
+header .header_flex .menu_gnb_sh ul.gnb_main li .sh_li_flex p .gnb_sh_huge {
+  display: none;
+}
+
+@media screen and (min-width: 1600px) {
+  header .header_flex .menu_gnb_sh ul.gnb_main li .sh_li_flex p .gnb_sh_huge {
+    display: inline;
+  }
+}
+
 header .header_flex .menu_gnb_sh .gnb_base {
   cursor: pointer;
   display: block;
@@ -404,17 +473,20 @@ header .header_flex .menu_gnb_sh .gnb_base {
   height: 8px;
   border-radius: 8px;
 }
+
 @media screen and (min-width: 1200px) {
   header .header_flex .menu_gnb_sh .gnb_base {
     margin-top: 20px;
   }
 }
+
 @media screen and (min-width: 1600px) {
   header .header_flex .menu_gnb_sh .gnb_base {
     height: 10px;
     border-radius: 10px;
   }
 }
+
 header .header_flex .menu_gnb_sh .gnb_base .gnb_over {
   display: block;
   position: absolute;
@@ -424,18 +496,21 @@ header .header_flex .menu_gnb_sh .gnb_base .gnb_over {
   height: 8px;
   border-radius: 8px;
 }
+
 @media screen and (min-width: 1200px) {
   header .header_flex .menu_gnb_sh .gnb_base .gnb_over {
     height: 8px;
     border-radius: 8px;
   }
 }
+
 @media screen and (min-width: 1600px) {
   header .header_flex .menu_gnb_sh .gnb_base .gnb_over {
     height: 10px;
     border-radius: 10px;
   }
 }
+
 header .header_flex .menu_gnb_sh .gnb_base .gnb_over img {
   position: absolute;
   top: 50%;
@@ -443,16 +518,19 @@ header .header_flex .menu_gnb_sh .gnb_base .gnb_over img {
   transform: translate(0, -50%);
   width: 20px;
 }
+
 @media screen and (min-width: 1200px) {
   header .header_flex .menu_gnb_sh .gnb_base .gnb_over img {
     width: 20px;
   }
 }
+
 @media screen and (min-width: 1600px) {
   header .header_flex .menu_gnb_sh .gnb_base .gnb_over img {
     width: 25px;
   }
 }
+
 header .gnb_nyan {
   position: fixed;
   top: 0;
@@ -464,77 +542,92 @@ header .gnb_nyan {
   min-height: 100vh;
   overflow: hidden;
 }
+
 @media screen and (min-width: 768px) {
   header .gnb_nyan {
     width: 50%;
   }
 }
+
 @media screen and (min-width: 1200px) {
   header .gnb_nyan {
     display: none;
   }
 }
+
 header .gnb_nyan .gnb_mobile {
   width: fit-content;
   margin: 0 auto;
   position: relative;
 }
+
 @media screen and (min-width: 1200px) {
   header .gnb_nyan .gnb_mobile {
     margin: 0 0 0 20px;
   }
 }
+
 header .gnb_nyan .gnb_mobile > img {
   cursor: pointer;
   position: relative;
   width: calc(20px + 5vw);
-  margin-right: 1vw;
+  margin-right: calc(1vw);
   animation: header_gnb_mobile 3s linear infinite;
 }
+
 @media screen and (min-width: 768px) {
   header .gnb_nyan .gnb_mobile > img {
     width: calc(20px + 3vw);
-    margin-right: 0.8vw;
+    margin-right: calc(0.8vw);
   }
 }
+
 header .gnb_nyan .gnb_mobile > img:nth-child(even) {
   animation-direction: reverse;
 }
+
 header .gnb_nyan .gnb_mobile > img:first-child {
   top: -60px;
   transform-origin: center 60px;
 }
+
 header .gnb_nyan .gnb_mobile > img:nth-child(2) {
   top: -90px;
   transform-origin: center 90px;
   animation-duration: 2.5s;
 }
+
 header .gnb_nyan .gnb_mobile > img:nth-child(3) {
   top: -40px;
   transform-origin: center 40px;
   animation-duration: 4s;
 }
+
 header .gnb_nyan .gnb_mobile > img:nth-child(4) {
   top: -100px;
   transform-origin: center 100px;
   animation-duration: 1.5s;
 }
+
 header .gnb_nyan .gnb_mobile > img:last-child {
   margin-right: 0;
   top: -30px;
   transform-origin: center 30px;
   animation-duration: 6s;
 }
+
 header .gnb_nyan .gnb_list .cat_img {
   display: block;
   height: calc(21px + 1vw);
   margin-right: 10px;
 }
+
 @media screen and (min-width: 768px) {
   header .gnb_nyan .gnb_list .cat_img {
     font-size: calc(18px + 1vw);
   }
 }
+
 header .gnb_nyan .gnb_list ul li {
   z-index: 2;
   display: flex;
@@ -547,34 +640,41 @@ header .gnb_nyan .gnb_list ul li {
   margin: 0 auto;
   margin-top: 25px;
 }
+
 header .gnb_nyan .gnb_list ul li:hover p {
   color: #e87d9e;
   transition: color 0.5s;
 }
+
 header .gnb_nyan .gnb_list ul li:hover p::after {
   transform: scaleX(1);
   transition: transform 1s;
 }
+
 @media screen and (min-width: 768px) {
   header .gnb_nyan .gnb_list ul li {
     margin-top: 20px;
   }
 }
+
 header .gnb_nyan .gnb_list ul li:first-child {
   margin-top: 0;
 }
+
 header .gnb_nyan .gnb_list ul li p {
   color: white;
   font-size: calc(21px + 1vw);
 }
+
 @media screen and (min-width: 768px) {
   header .gnb_nyan .gnb_list ul li p {
     font-size: calc(18px + 1vw);
   }
 }
+
 header .gnb_nyan .gnb_list ul li p::after {
   display: block;
-  content: "";
+  content: '';
   height: 4px;
   background: url(../img/header/crayon_stroke.png);
   background-size: cover;
@@ -583,12 +683,14 @@ header .gnb_nyan .gnb_list ul li p::after {
   transform-origin: left;
   margin-top: 1px;
 }
+
 header .gnb_nyan .gnb_lower {
   height: 200px;
 }
+
 header .gnb_nyan .gnb_lower .gaussian_light {
   position: absolute;
-  bottom: 0;
+  bottom: -0;
   display: block;
   width: 100%;
   max-width: 500px;
@@ -596,14 +698,16 @@ header .gnb_nyan .gnb_lower .gaussian_light {
   transform: translateX(-50%);
   height: 480px;
   background-color: #ffffff;
-  background: rgb(255, 255, 255);
+  background: white;
   background: radial-gradient(circle, rgba(255, 255, 255, 0.8) 0%, rgba(255, 255, 255, 0.45) 44%, rgba(255, 255, 255, 0) 66%);
 }
+
 @media screen and (min-width: 768px) {
   header .gnb_nyan .gnb_lower .gaussian_light {
     width: calc(340px + 5vw);
   }
 }
+
 header .gnb_nyan .gnb_lower .base_bottom {
   position: absolute;
   display: block;
@@ -612,17 +716,21 @@ header .gnb_nyan .gnb_lower .base_bottom {
   height: 36px;
   background-color: #e87d9e;
 }
+
 header .gnb_nyan .gnb_lower .base_bottom .base_img {
   position: relative;
 }
+
 header .gnb_nyan .gnb_lower .base_bottom .base_img > img {
   position: absolute;
   bottom: -20px;
 }
+
 header .gnb_nyan .gnb_lower .base_bottom .base_img .gnb_bead {
   width: calc(100px + 3vw);
   right: 200px;
 }
+
 header .gnb_nyan .gnb_lower .base_bottom .base_img .gnb_kitty {
   width: calc(140px + 3vw);
   right: 20px;
