--- a/works/react/todolist/src/components/css/TodoBighead.css
+++ b/works/react/todolist/src/components/css/TodoBighead.css
@@ -1,14 +1,16 @@
 @font-face {
-  font-family: "Cafe24SsurroundAir";
+  font-family: 'Cafe24SsurroundAir';
   src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2105_2@1.0/Cafe24SsurroundAir.woff") format("woff");
   font-weight: normal;
   font-style: normal;
 }
+
 .TodoBighead {
   width: 512px;
   margin: 6rem auto 0;
   background-color: #000620;
 }
+
 .TodoBighead .bigtitle {
   height: 10rem;
   position: relative;
@@ -16,6 +18,7 @@
   background-position: center;
   background-size: cover;
 }
+
 .TodoBighead .bigtitle p {
   font-family: Cafe24SsurroundAir;
   color: #fff;
@@ -24,11 +27,13 @@
   padding-left: 16px;
   font-weight: bold;
 }
+
 .TodoBighead .bigtitle p h3.todobighead {
   font-size: 24px;
   margin: 0;
   margin-top: 0.5rem;
 }
+
 .TodoBighead .bigtitle .img_title {
   position: absolute;
   width: 55px;
