--- a/works/react/todolist/src/components/css/TodoModify.css
+++ b/works/react/todolist/src/components/css/TodoModify.css
@@ -7,6 +7,7 @@
   z-index: 5;
   background-color: rgba(0, 0, 0, 0.5);
 }
+
 .background .modify_modal {
   position: absolute;
   top: 50%;
@@ -15,9 +16,10 @@
   width: 300px;
   background-color: #000620;
   border-radius: 10px;
-  box-shadow: 0px 0px 15px rgb(255, 255, 234);
+  box-shadow: 0px 0px 15px #ffffea;
   padding: 1rem 0;
 }
+
 .background .modify_modal h3 {
   color: #e87d93;
   text-align: center;
@@ -25,6 +27,7 @@
   margin-top: 0;
   margin-bottom: 14px;
 }
+
 .background .modify_modal .modify_flex {
   display: flex;
   justify-content: space-between;
@@ -32,6 +35,7 @@
   width: 90%;
   margin: 0 auto;
 }
+
 .background .modify_modal .modify_input {
   background-color: transparent;
   outline: none;
@@ -42,6 +46,7 @@
   display: block;
   width: 80%;
 }
+
 .background .modify_modal .modify_btn {
   cursor: pointer;
   background-color: transparent;
