--- a/scss/style.scss
+++ b/scss/style.scss
@@ -14,6 +14,9 @@ $identity: #e87d9e;
 $gray1: #9ea0a4;
 $second: #fcf8ac;
 
+$evening: #1a003b;
+$dawn: #c7edff;
+
 /*=============디자인노트=================*/
 
 $dn_txt: #444;
