--- a/css/header.css
+++ b/css/header.css
@@ -112,6 +112,24 @@
   }
 }
 
+@keyframes mk_icons_swing {
+  0% {
+    transform: translateY(0);
+  }
+  25% {
+    transform: translateY(0.5rem);
+  }
+  50% {
+    transform: translateY(0);
+  }
+  75% {
+    transform: translateY(-0.5rem);
+  }
+  100% {
+    transform: translateY(0);
+  }
+}
+
 @keyframes nyan_hover_tone {
   0% {
     color: #ffe1eb;
